src/objects/copado__Project__c.object
<CustomObject>
    <description>Overall object for capturing the project details.</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>56</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__Deployment_Flow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If working with Copado Change Management, the Project must be linked to a Pipeline.</inlineHelpText>
        <label>Pipeline</label>
        <referenceTo>copado__Deployment_Flow__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado__Exclude_Tabs_from_Promotion_Page__c</fullName>
        <label>Exclude Tabs from Promotion Page</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Static Code Analysis Summary</fullName>
                </value>
                <value>
                    <fullName>Selenium Test</fullName>
                </value>
                <value>
                    <fullName>Promotion User Story Metadata</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Index_Metadata__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When this field is checked, Copado will index the metadata selected against the user stories into the User Story Metadata custom object. Indexed metadata can be used for reporting and compliance, and it&apos;s also used by Copado overlap awareness feature.</inlineHelpText>
        <label>Index Metadata</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copadoccmint__Copado_Integration_Setting__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Copado Integration Setting</label>
        <referenceTo>copadoccmint__Copado_Integration_Setting__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copadoccmint__Enable_Community_User__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable to sync User Stories assigned to community users.</inlineHelpText>
        <label>Enable Community Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copadoccmint__Enable_Logs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you are fetching more then 500 records from the third party platform, we recommend you to disable this checkbox to be able to prevent heap size too large issue.</inlineHelpText>
        <label>Enable Logs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copadoccmint__JQL_Extended_Filter__c</fullName>
        <inlineHelpText>If you want to add an additional filter to your JIRA callout, you can just modify this field.
Usage exp: issueType=Story and resolution=Duplicate</inlineHelpText>
        <label>JQL Extended Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadoccmint__Project_External_Id__c</fullName>
        <label>Project External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadoccmint__Sprint_Per_Batch_Chunk_Size__c</fullName>
        <defaultValue>50</defaultValue>
        <inlineHelpText>If in case, you are getting too many callout issue due to more number of User Stories per Sprint or due to more number of sprint.
    You can reduce the batch size in this field.</inlineHelpText>
        <label>Sprint Per Batch Chunk Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadoccmint__Team_Info__c</fullName>
        <inlineHelpText>Comma separated Team Name/Id to fetch Team sprints. Exp: Frontend Team,Backend Team,QA Team</inlineHelpText>
        <label>Team Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadoccmint__Workspace_Id__c</fullName>
        <label>Workspace Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Start_Date__c</columns>
        <columns>copado__End_Date__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Deployment_Flow__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>